--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
     </script>
     
+    <!-- Plotly CDN for Graph Rendering -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
